# djinn

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  package-lock.json  package.json  todo.txt  watcher.bat  watcher.js  watcher.sh
bundler/: index.js  package-lock.json  package.json
cwd/maps/01/: map.phorm
cwd/res/glsl/: animated.frag  animated.vert  basic.vert  blob.frag  blob.vert  cube.frag  cube.vert  custom.vert  ground.frag  ground.vert  phorm.frag  phorm.vert  phorm2.vert  phorm_alpha.frag  phorm_water.frag  phorm_water.vert  sky.frag  sky.vert  static.frag  static.vert  test.frag  test.vert  test2.frag  wing.frag  wing.vert
cwd/res/mesh/: cube.m3d  icosphere.m3d  monster.m3d  xbot.m3d
cwd/res/phorm/: city.xport
cwd/res/xport/: 01.xport  castle.xport  castle2.xport  castle3.xport  castle4.xport  city.xport  city2.xport  city3.xport  city_new.xport  cube.xport  hill.xport  hill2.xport
enc_temp_folder/8d83d21e5dd583a32388b44cd853e0d/: entity.cpp
lib/glad/src/: glad.cpp
src/: asset_service.cpp  asset_service.h  component.h  constants.h  directory_watcher.cpp  directory_watcher.h  entity.cpp  entity.h  entity2.cpp  entity2.h  js_global.h  m3d.cpp  main.cpp  manager.h  mesh_manager.cpp  mesh_manager.h  pch.h  script_manager.cpp  script_manager.h  script_watcher.cpp  script_watcher.h  scripts_manager.cpp  scripts_manager.h  util.cpp  util.h
src/asset/: animated_mesh.cpp  animated_mesh.h  custom_mesh.cpp  custom_mesh.h  generated_mesh.cpp  generated_mesh.h  loaded_mesh.h  material.cpp  material.h  mesh.cpp  mesh.h  shaders.cpp  shaders.h  sound_source.cpp  sound_source.h  static_mesh.cpp  static_mesh.h
src/asset/mesh/: animated_mesh.cpp  animated_mesh.h  custom_mesh.cpp  custom_mesh.h  loaded_mesh.h  mesh.cpp  mesh.h  static_mesh.cpp  static_mesh.h
src/asset/xport/: material.cpp  material.h
src/core/: constants.h  identifiable.h  m3d.cpp  m3d.h  util.cpp  util.h
src/debug/: cubemap_watcher.cpp  cubemap_watcher.h  directory_watcher.cpp  directory_watcher.h  physics_debug_drawer.cpp  physics_debug_drawer.h  script_watcher.cpp  script_watcher.h  shader_watcher.cpp  shader_watcher.h  sound_source_watcher.cpp  sound_source_watcher.h  texture_watcher.cpp  texture_watcher.h
src/manager/: camera_entity_manager.h  cubemap_manager.cpp  custom_mesh_manager.cpp  custom_mesh_manager.h  entity_manager.cpp  entity_manager.h  generated_mesh_manager.cpp  generated_mesh_manager.h  light_manager.cpp  light_manager.h  loaded_mesh_manager.h  manager.h  material_manager.cpp  material_manager.h  mesh_instance_manager.cpp  mesh_instance_manager.h  phorm_manager.cpp  phorm_manager.h  physics_object_manager.cpp  physics_object_manager.h  power_loader.h  shader_manager.h  sound_emitter_manager.h  sound_source_manager.h  static_mesh_manager.cpp  static_mesh_manager.h  texture_manager.cpp  texture_manager.h  waypoint_manager.cpp  waypoint_manager.h
src/manager/asset/: cubemap_manager.cpp  cubemap_manager.h  custom_mesh_manager.cpp  custom_mesh_manager.h  loaded_mesh_manager.h  shader_manager.cpp  shader_manager.h  sound_source_manager.cpp  sound_source_manager.h  texture_manager.cpp  texture_manager.h
src/manager/scene/: camera_entity_manager.cpp  camera_entity_manager.h  entity_manager.cpp  entity_manager.h  entity_manager_base.h  mesh_instance_manager.cpp  mesh_instance_manager.h  physics_object_manager.cpp  physics_object_manager.h  sound_emitter_manager.cpp  sound_emitter_manager.h
src/manager/xport/: light_manager.cpp  light_manager.h  material_manager.cpp  material_manager.h  phorm_manager.cpp  phorm_manager.h  waypoint_manager.cpp  waypoint_manager.h
src/scene/: animated_mesh_instance.cpp  animated_mesh_instance.h  bvh_physics_object.cpp  camera_entity.cpp  camera_entity.h  entity.cpp  entity.h  light.cpp  light.h  mesh.cpp  mesh.h  mesh_instance.cpp  mesh_instance.h  mesh_instance_batch.cpp  mesh_instance_batch.h  phorm.cpp  phorm.h  physics_object.cpp  physics_object.h  scene_object.cpp  scene_object.h  scene_object_base.cpp  scene_object_base.h  script_manager.cpp  script_manager.h  sound_emitter.cpp  sound_emitter.h  sound_source.cpp  sound_source.h  tagged.cpp  tagged.h  visibility_scene_object.cpp  visibility_scene_object.h  waypoint.h  xport.h
src/scene/entity/: camera_entity.cpp  camera_entity.h  entity.cpp  entity.h
src/scene/mesh/: animated_mesh_instance.cpp  animated_mesh_instance.h  mesh_instance.cpp  mesh_instance.h  mesh_instance_batch.cpp  mesh_instance_batch.h
src/scene/physics/: box_physics_object.cpp  box_physics_object.h  bvh_physics_object.cpp  bvh_physics_object.h  capsule_physics_object.cpp  capsule_physics_object.h  cylinder_physics_object.cpp  cylinder_physics_object.h  physics_object.cpp  physics_object.h  primitive_physics_object.cpp  primitive_physics_object.h  sphere_physics_object.cpp  sphere_physics_object.h
src/scene/xport/: light.cpp  light.h  phorm.cpp  phorm.h  waypoint.cpp  waypoint.h  xport.cpp  xport.h
src/script/: asset_service.cpp  asset_service.h  js.cpp  js.h  js_global.cpp  js_global.h  manager.h  mesh_manager.cpp  mesh_manager.h  render_service.cpp  render_service.h  service.h  shader_manager.cpp  shader_manager.h  texture_manager.cpp  texture_manager.h
src/script/manager/: camera_entity_manager.cpp  cubemap_manager.cpp  cubemap_manager.h  entity_manager.cpp  entity_manager.h  entity_manager_base.h  manager.h  mesh_instance_manager.cpp  mesh_instance_manager.h  mesh_manager.cpp  mesh_manager.h  shader_manager.cpp  shader_manager.h  sound_emitter_manager.cpp  sound_emitter_manager.h  sound_source_manager.cpp  sound_source_manager.h  static_mesh_manager.h  texture_manager.cpp  texture_manager.h
src/script/service/: asset_service.cpp  asset_service.h  event_service.cpp  event_service.h  imgui_service.cpp  imgui_service.h  input_service.cpp  input_service.h  nanovg_service.cpp  nanovg_service.h  physics_service.cpp  physics_service.h  render_service.cpp  render_service.h  scene_service.cpp  scene_service.h  service.h  sound_service.cpp  sound_service.h  util_service.cpp  util_service.h
(+36 files in other folders)
